# frog

./: .gitignore  Dockerfile.target  example.ini  pyproject.toml
frog/: __init__.py  cli.py  config.py  connection.py  context.py  errors.py  execution.py  fact_cache.py  inventory.py  result.py  runner.py
frog/facts/: __init__.py  host_meta.py  network.py  platform.py  tailscale.py
frog/remoteenv/: __init__.py  bootstrapper.py  requirements.txt
frog/resources/: __init__.py  facts.py  file.py  test.py
frog/util/: __init__.py  deco.py  dictser.py  kvparse.py  outputs.py  packages.py  yamlext.py
tests/inventory/: local.yml
tests/util/: test_dictser.py
